<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/reportMapView"
        android:layout_width="329dp"
        android:layout_height="174dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp">

    </com.mapbox.mapboxsdk.maps.MapView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_title_incident"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/incident_title"
 />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/text_description">

                </com.google.android.material.textfield.TextInputEditText>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/shapeableImageView"
                    android:layout_width="228dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:src="@mipmap/picture_holder">

                </com.google.android.material.imageview.ShapeableImageView>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnCaptureImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="280dp"
                    android:layout_marginTop="-120dp"
                    android:src="@drawable/ic_add_circle_outline_black_24dp">

                </androidx.appcompat.widget.AppCompatImageButton>



                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_categories"
                    android:textStyle="bold"
               >

                </androidx.appcompat.widget.AppCompatTextView>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/text_cat1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_parking"
>

                </com.google.android.material.checkbox.MaterialCheckBox>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/text_cat2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_panneau"
      >

                </com.google.android.material.checkbox.MaterialCheckBox>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/text_cat3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_espace"
     >

                </com.google.android.material.checkbox.MaterialCheckBox>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/text_cat4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/cat_proprete"
>

                </com.google.android.material.checkbox.MaterialCheckBox>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/send_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:backgroundTint="@color/colorUnivLille"
                    android:gravity="center_horizontal"
                    android:text="@string/send_report"
                    android:textColor="@color/colorSplashText">

                </androidx.appcompat.widget.AppCompatButton>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>



</LinearLayout>