<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout_report"
    android:fitsSystemWindows="true"
    tools:context=".ReportActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout

            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_details"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"

                android:background="@color/colorUnivLille"
                android:minHeight="?attr/actionBarSize"
                app:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:navigationIcon="?attr/homeAsUpIndicator"
                />

            <com.mapbox.mapboxsdk.maps.MapView
                android:id="@+id/reportMapView"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
   >

            </com.mapbox.mapboxsdk.maps.MapView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"

                android:gravity="center"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                android:src="@drawable/back_arrow_dark" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="831dp"
            android:layout_margin="10dp"
            tools:layout_editor_absoluteY="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_title_incident"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:hint="@string/incident_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:hint="@string/text_description"
                app:layout_constraintBottom_toTopOf="@+id/shapeableImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title_incident"
                app:layout_constraintVertical_bias="0.0">

            </com.google.android.material.textfield.TextInputEditText>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeableImageView"
                android:layout_width="228dp"
                android:layout_height="160dp"
                android:layout_marginTop="232dp"
                android:layout_marginEnd="80dp"
                android:src="@mipmap/picture_holder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </com.google.android.material.imageview.ShapeableImageView>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnCaptureImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_circle_outline_black_24dp"
                app:layout_constraintBottom_toTopOf="@+id/shapeableImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.403"
                app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
                app:layout_constraintTop_toBottomOf="@+id/text_description"
                app:layout_constraintVertical_bias="0.419">

            </androidx.appcompat.widget.AppCompatImageButton>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_categories"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.098"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shapeableImageView"
                app:layout_constraintVertical_bias="0.0">

            </androidx.appcompat.widget.AppCompatTextView>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/text_cat1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cat_parking"
                app:buttonTint="#009688"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_categories">

            </com.google.android.material.checkbox.MaterialCheckBox>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/text_cat2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cat_panneau"
                app:buttonTint="#009688"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_cat3">

            </com.google.android.material.checkbox.MaterialCheckBox>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/text_cat3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cat_espace"
                app:buttonTint="#009688"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_cat4">

            </com.google.android.material.checkbox.MaterialCheckBox>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/text_cat4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/cat_proprete"
                app:buttonTint="#009688"
                app:layout_constraintEnd_toEndOf="@+id/text_cat1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_cat1">

            </com.google.android.material.checkbox.MaterialCheckBox>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/send_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="1dp"
                android:backgroundTint="@color/colorUnivLille"
                android:text="@string/send_report"
                android:textColor="@color/colorSplashText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_cat3"
                app:layout_constraintVertical_bias="0.0">

            </androidx.appcompat.widget.AppCompatButton>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>